Refactors: - index.html: Add IDs to toggle btns - colors.css: Remove dark mode query - queries.css: Add border radius to desk container - index.css: Remove box shadow styles and utility class, fix profile card padding

--- a/css/colors.css
+++ b/css/colors.css
@@ -6,7 +6,6 @@
   --stone-blue: #4B6A9B;
   --dark-gray: #2B3442;
   --primary-blue: #0079FF;
-
   --off-white: #FEFEFE;
   --white: #FFFFFF;
   --off-black: #141D2F;
@@ -34,15 +33,3 @@
   --accent-text: var(--white);
   --attr-color: var(--pale-blue);
 }
-
-/* !Comment out until finished */
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --main-bg: var(--off-black);
-    --container-bg: var(--navy-blue);
-    --primary-text: var(--white);
-    --secondary-text: var(--white);
-    --accent-text: var(--white);
-    --attr-color: var(--pale-blue);
-  }
-} */
