--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ h2 {
 }
 
 h3 {
-  font-size: clamp(16px, 16px + .5vw, 20px);
+  font-size: clamp(16.5px, 16px + .5vw, 24px);
   line-height: 1.6rem;
 }
 
@@ -69,11 +69,6 @@ h4 {
   width: 1px;
 }
 
-/*TODO: use in JS for .search-bar, .profile-card, and .desk-container */
-.no-box-shadow {
-  box-shadow: none;
-}
-
 /* Containers */
 .page-wrap {
   justify-content: center;
@@ -85,20 +80,17 @@ h4 {
 
 .container {
   align-items: center;
-  width: clamp(90vw, 90%, 95vw);
-  gap: .5em;
+  width: calc(90% + 1vw);
+  gap: 1em;
 }
 
-.header,
-.search,
-.main {
+.container :is(.header, .main) {
   width: 95%;
 }
 
 .header {
   justify-content: space-between;
   margin-block-start: 1em;
-  margin-block-end: .5em;
 }
 
 /* Scheme Toggle */
@@ -118,12 +110,12 @@ h4 {
   margin-inline-start: .5rem;
 }
 
-.dark-btn:hover {
+#dark-btn:hover {
   color: var(--accent-text);
   cursor: pointer;
 }
 
-.light-btn:hover {
+#light-btn:hover {
   color: var(--btn-active);
   cursor: pointer;
 }
@@ -131,6 +123,7 @@ h4 {
 /* Search Bar */
 .search {
   width: 100%;
+  margin-block-end: 20px;
 }
 
 .search-wrapper {
@@ -150,7 +143,6 @@ h4 {
   padding: 1rem 3.33rem 1rem 2.33rem;
   border: none;
   border-radius: 1rem;
-  box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.2);
 }
 
 .search-bar::placeholder {
@@ -187,6 +179,7 @@ h4 {
 
 /* Profile */
 .desk-container {
+  border-radius: 1rem;
   grid-template-columns: 1fr;
   margin-block-start: 1em;
 }
@@ -194,11 +187,10 @@ h4 {
 .profile-card {
   background-color: var(--container-bg);
   gap: .5em;
-  padding: 1rem;
+  padding: 1.5rem;
   padding-block-end: 0;
   margin-block-start: 1rem;
   border-radius: 1rem;
-  box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.2);
 }
 
 .user-info-wrap {
@@ -206,7 +198,7 @@ h4 {
 }
 
 .profile-img {
-  width: clamp(120px, 0.5vw, 130px);
+  width: calc(90px + 1vw);
 }
 
 .profile-img-wrap-desktop {
@@ -216,6 +208,7 @@ h4 {
 /* Profile - User Info */
 .user-info {
   width: 100%;
+  justify-content: space-evenly;
   gap: 5px;
 }
 
@@ -230,7 +223,7 @@ h4 {
 
 .user-bio {
   margin: 1rem 0;
-  min-height: 10vh;
+  min-height: 5vh;
 }
 
 /* Profile - User Data */
@@ -282,7 +275,7 @@ h4 {
 
 /* Footer */
 .footer {
-  font-size: 11px;
+  font-size: 12px;
   text-align: center;
 }
 
